Much more of the refactoring.